# voyager

./: .dockerignore  .gitignore  README.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/tests/: test_routes.py
apps/api/voyager_api/: __init__.py  main.py
apps/cli/: pyproject.toml
apps/cli/tests/: test_cli.py
apps/cli/voyager_cli/: __init__.py  main.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/tests/: test_worker_loop.py
apps/worker/voyager_worker/: __init__.py  __main__.py  main.py
docs/: PRD.md  operations.md
docs/plans/: 2026-04-19-eric-build.md  2026-04-21-eric-eval-gate.md  2026-04-21-eric-stability-and-eval.md
docs/research/: 2026-04-21-eric-output-stability.md
infra/: README.md  aoai.bicep  deploy.ps1  main.bicep
scripts/: audit_gold_aliases.py  compare_p1_dryrun.py  diag_p0_9_histogram.py  diff_hooks.py  dump_pred.py  inspect_failed.py  inspect_insights.py  rescore_at_threshold.py  rescore_perbucket_gate.py  reset_failed.py  smoke_copilot.py  smoke_local.py
scripts/win/: run_copilot.ps1
