[project]
name = "voyager-api"
version = "0.1.0"
description = "FastAPI service exposing Eric agent endpoints for local CLI + UI."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic>=2.8",
    "voyager-common",
    "voyager-db",
    "voyager-tools",
    "voyager-agents",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[tool.uv.sources]
voyager-common = { workspace = true }
voyager-db = { workspace = true }
voyager-tools = { workspace = true }
voyager-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voyager_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
