[project]
name = "voyager-cli"
version = "0.1.0"
description = "Local typer CLI for Voyager Eric agent (submit, status, process, brief)."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "sqlmodel>=0.0.22",
    "voyager-common",
    "voyager-db",
    "voyager-tools",
    "voyager-agents",
]

[project.scripts]
voyager = "voyager_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.uv.sources]
voyager-common = { workspace = true }
voyager-db = { workspace = true }
voyager-tools = { workspace = true }
voyager-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voyager_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
