[project]
name = "voyager-worker"
version = "0.1.0"
description = "Async Service Bus consumer running the Eric data subgraph."
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
    "structlog>=24.4",
    "langfuse>=2.50",
    "voyager-common",
    "voyager-db",
    "voyager-tools",
    "voyager-agents",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.uv.sources]
voyager-common = { workspace = true }
voyager-db = { workspace = true }
voyager-tools = { workspace = true }
voyager-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voyager_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
